# abyss

./: CMakeLists.txt
include/abyss/: allocator.h  awaitable.hpp  basic_error.h  byte.h  callback.h  dispatcher.h  error.h  handler.h  included_version.h.in  linked_version.h  lockable.hpp  malloc_free_allocator.h  microseconds.h  mutex.hpp  nanoseconds.h  platform.h  platform.hpp  randomizer.h  std_allocator.h  stdlib_allocator.h  strand.h  symbol.h  task.h  timer.h  timer.hpp  version.h  version.h.in  work.h  worker.h  worker_pool.hpp
include/abyss/detail/: align_as.h  align_of.h  always_inline.h  api.h  epilog.h  extern_c.h  os.h  prolog.h
include/abyss/impl/: align_as.h  align_of.h  alignment_of.h  always_inline.h  api.h  assign_void_ptr.h  epilog.h  os.h  prolog.h  static_assert.h
src/: basic_error.c  error.c  lay_out.c  lay_out.h  linked_version.c  malloc_free_allocator.c  max.h  platform.c  round_up.h  std_allocator.c  stdlib_allocator.c  symbol.c  version.c
